[package]
name = "tia"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive", "env", "cargo"] }

tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

thiserror = "2.0"
color-eyre = "0.6"

tabled = "0.17"
termtree = "0.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-trait = "0.1"

dirs = "5.0"

[dev-dependencies]
serial_test = "3.3.1"
wiremock = "0.5.1"
